--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
 
-    <link rel="stylesheet" href="style,css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"defer></script>
 </head>
 <body>
     <h1>Spiel</h1>
-    <svg>
+    <svg viewBox="0 0 100 100">
+
+<circle 
+id="player"
+cx="50"
+cy="50"
+r="5"
+fill="pink">
 
 
+
+</circle>
     </svg>
 </body>
 </html>
